[gd_scene load_steps=6 format=3 uid="uid://daxk3182akb3a"]

[ext_resource type="Script" path="res://scripts/f_coal_throwing_game.gd" id="1_k85fr"]
[ext_resource type="PackedScene" uid="uid://cwgifrpiwcpmo" path="res://scenes/coal.tscn" id="2_n4jxd"]
[ext_resource type="Texture2D" uid="uid://l0kbtiv50wbv" path="res://textures/Coal Sprite.png" id="3_i2xqx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yrht3"]
radius = 181.025

[sub_resource type="Curve2D" id="Curve2D_qdjk3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1486, 517, 0, 0, 0, 0, 1454, 552, 0, 0, 0, 0, 1426, 598, 0, 0, 0, 0, 1411, 641, 0, 0, 0, 0, 1409, 701, 0, 0, 0, 0, 1419, 755, 0, 0, 0, 0, 1444, 803)
}
point_count = 7

[node name="FCoalThrowingGame" type="Node"]
script = ExtResource("1_k85fr")
coal_scene = ExtResource("2_n4jxd")

[node name="Forge" type="Area2D" parent="."]
position = Vector2(330, 744)
collision_mask = 0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Forge"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Forge"]
shape = SubResource("CircleShape2D_yrht3")

[node name="Background" type="Sprite2D" parent="."]

[node name="CoalBox" type="Node" parent="."]

[node name="ArrowPath" type="Path2D" parent="CoalBox"]
curve = SubResource("Curve2D_qdjk3")

[node name="ArrowPoint" type="PathFollow2D" parent="CoalBox/ArrowPath"]
position = Vector2(1486, 517)
rotation = 2.31145

[node name="Arrow" type="Sprite2D" parent="CoalBox/ArrowPath/ArrowPoint"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_i2xqx")

[node name="Sprite2D" type="Sprite2D" parent="CoalBox"]
position = Vector2(1648, 811)

[node name="ShootingPoint" type="Marker2D" parent="CoalBox"]
position = Vector2(1648, 689)

[connection signal="body_entered" from="Forge" to="." method="_on_forge_body_entered"]
